--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,11 @@
 .App {
   text-align: center;
+  justify-content: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.App header {
+  background-color: #7320ab;
+  height: 70px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -23,16 +13,57 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+form {
+  border-color: #616060;
+  font-size: x-large;
+  border: solid;
+  border-radius: 10px;
+  border-width: 1px;
+  margin: 20px 10px;
+  height: 100px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.form input{
+    margin-left: 5px;
+    font-size: large;
+    border-radius: 5px;
+}
+.button {
+  font-size: large;
+background-color: #9b9b9b;
+border-radius: 10px;
+border-style: hidden;
+margin-top: 30px;
+margin-bottom: 5px;
+}
+.button:hover {
+  cursor: pointer;
+background-color: #616060;
+border-radius: 10px;
+}
+.table {
+  width: 100%;
+  background-color: #868585;
+  padding: 10px;
+  margin: 40px 0px;
+}
+.table th{
+  padding: 0px;
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 10px;
+  background-color: #9b9b9b;
+}
+.table td{
+  padding: 5px;
+  background-color: #ffffff;
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 10px;
+}
+.search-bar{
+  font-size: large;
+  border-width: 1px;
+  width: 98%;
+  margin-top: 10px;
+  border-radius: 7px;
 }
